google meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="google-site-verification" content="UkuDOjpcnwJbzyEEFOK3cDnB_hTIPQ_KKDD3ddQLjIA">
+ <meta name="google-site-verification" content="UkuDOjpcnwJbzyEEFOK3cDnB_hTIPQ_KKDD3ddQLjIA" />
   <title>Portfolio – causeri3</title>
   <style>
     body {
