--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <h3>Private Fun</h3>
     <div class="repo">
       <a href="https://github.com/causeri3/fine-o-clock">fine-o-clock</a><br>
-      Garmin Watch Face
+      Garmin Watch Face: <a href="https://apps.garmin.com/en-US/apps/46e9c768-4eb1-470c-93a8-29dd11219b61">Fine'o Clock</a>
     </div>
     <div class="repo">
       <a href="https://github.com/causeri3/emo-track">emo-track</a><br>
