link to exhibition

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     </div>
     <div class="repo">
       <a href="https://github.com/causeri3/face-detection-stream">face-detection-stream</a><br>
-      YOLOv8-based face detection for robotic head – Deichkind exhibition “Könnt ihr noch?”
+      YOLOv8-based face detection for robotic head – Deichkind <a href="https://www.pinakothek-der-moderne.de/ausstellungen/koennt-ihr-noch-kunst-und-demokratie/">exhibition</a><br> “Könnt ihr noch?”
+      https://www.pinakothek-der-moderne.de/ausstellungen/koennt-ihr-noch-kunst-und-demokratie/
     </div>
   </section>
 
